--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "plastiq-medium-editor",
+  "name": "hyperdom-medium-editor",
   "version": "1.1.0",
-  "description": "medium-editor for plastiq",
+  "description": "medium-editor for hyperdom",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -9,7 +9,7 @@
   "author": "Tim Macfarlane <timmacfarlane@gmail.com>",
   "license": "ISC",
   "keywords": [
-    "plastiq"
+    "hyperdom"
   ],
   "dependencies": {
     "medium-editor": "4.5.2"
@@ -17,10 +17,10 @@
   "devDependencies": {},
   "repository": {
     "type": "git",
-    "url": "https://github.com/featurist/plastiq-medium-editor.git"
+    "url": "https://github.com/featurist/hyperdom-medium-editor.git"
   },
   "bugs": {
-    "url": "https://github.com/featurist/plastiq-medium-editor/issues"
+    "url": "https://github.com/featurist/hyperdom-medium-editor/issues"
   },
-  "homepage": "https://github.com/featurist/plastiq-medium-editor"
+  "homepage": "https://github.com/featurist/hyperdom-medium-editor"
 }
